<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pomodoro" translatable="false">Pomodoro</string>
    <string name="back_button" translatable="false">back button</string>
    <string name="reset_all_promodoro_time" translatable="false">Reset all promodoro time</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="start" translatable="false">Start</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="txtColon" translatable="false">:</string>
    <string name="_00" translatable="false">00</string>
    <string name="hour" translatable="false">hour</string>
    <string name="minute" translatable="false">minute</string>
    <string name="focus_duration" translatable="false">Focus Duration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="failure_sub_string" translatable="false">You haven\'t completed any Pomodoros</string>
    <string name="failure_title_string" translatable="false">Uh no!</string>
    <string name="success_title_string" translatable="false">Well done!</string>
</resources>