<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quber_appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/quber_toolbar"
        style="@style/ToolBarStyle"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/promodoroBackBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/back_button"
            android:src="@drawable/backward_left" />

        <TextView
            android:id="@+id/quber_title"
            style="@style/PromodoroTitleStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pomodoro" />

        <ImageView
            android:id="@+id/promodoroValueResetBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:padding="12dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/reset_all_promodoro_time"
            android:src="@drawable/reset_timer" />

    </LinearLayout>
</com.google.android.material.appbar.AppBarLayout>