<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/playPauseContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnPlayPause"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:elevation="@dimen/_15sdp"
            app:cardBackgroundColor="@color/button_blue"
            app:cardCornerRadius="@dimen/_35sdp">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_play" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="@id/btnPlayPause"
            app:layout_constraintStart_toStartOf="@id/btnPlayPause"
            app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restartContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnReset"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:elevation="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_35sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/reset" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="@id/btnPlayPause"
            app:layout_constraintStart_toStartOf="@id/btnPlayPause"
            app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stopContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnStop"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:elevation="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_35sdp">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_stop" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/stop"
            app:layout_constraintEnd_toEndOf="@id/btnPlayPause"
            app:layout_constraintStart_toStartOf="@id/btnPlayPause"
            app:layout_constraintTop_toBottomOf="@id/btnPlayPause" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>